<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">MemoMeme Challenge</string>
    <string name="textGameName">MemoMeme Challenge</string>
    <string name="buttonGo">Start</string>
    <string name="buttonRestart">Restart</string>
    <string name="buttonExit">Exit</string>
    <string name="buttonMainMenu">Main</string>
    <string name="button_continue">Continue</string>
    <string name="button_help">Help</string>
    <string name="button_about">About</string>
    <string name="button_sound">Sound On/Off</string>
    <string name="button_pause_play">Pause/Play</string>
    <string name="button_settings">Settings</string>
    <string name="button_more_apps">More by Tir CS</string>
    <string name="imgSlot">Troll</string>
    <string name="imgGameOver">Game Over Meme</string>
    <string name="youWin">You Win</string>
    <string name="youLose">You Lose</string>
    <string name="gameOver">Game Over</string>
    <string name="gameOverAll">Game Over \n YOU WON!</string>
    <string name="new_record">NEW RECORD!!!</string>
    <string name="enterUserTitle">Enter your name</string>
    <string name="fieldUserName">name</string>
    <string name="submitUserName">Submit</string>
    <string name="next_button">Next</string>
    <string name="imgBoard">Board</string>
    <string name="imgChallengeCons">Challenge Considered</string>
    <string name="tableHeaderBefore">Before</string>
    <string name="tableHeaderLastLevel">Last</string>
    <string name="tableHeaderForSeconds">For Seconds</string>
    <string name="tableHeaderTotal">Total</string>
    <string name="highScores">Scores</string>
    <string name="settings_title_sound">Sound Pack</string>
    <string name="settings_title_sound_toggle">Sound</string>
    <string name="radio_sound_trollish">Trollish xD</string>
    <string name="radio_sound_simpsons">Simpsons :D</string>
    <string name="radio_sound_normal">Normal :)</string>
    <string name="radio_sound_off">Off</string>
    <string name="radio_sound_on">On</string>
    <string name="about_text">MemoMeme Challenge\n v. 1.0.0\n© Tir CS, Tir Games, 2012</string>
    <string name="instructions_title_text">Instructions</string>
    <string name="instructions_text">Your task is to remember the location of the same trollfaces and find them in a given period of time.\nThe game gradually becomes more complicated as the time of showing the cards given initially shortens, the number of the cards increases and/or the time of the game is reduced.\nThe minimal scores given for the correctly guessed pair are increasing with each level. If you open the right pair one after another the minimal scores are multiplied (second pair - X×2, third pair - Х×3 etc.). At the end of the level the seconds left also turn into scores (being multiplied according to the level) are added to the scores for the current level and the scores for the previous ones.\nIn case of losing the game, the scores which you have managed to earn are being added to the previous scores and get into the top scores.\nYou can replay the last level if you lost the game or you think that you could get more scores.\nAfter another passed level you can quit the game, then you will have the opportunity to continue it from the level you’ve reached. If you start a new game, you’ll not be able to continue the previous one any more.\nYou can choose or switch off the sound of the game in the settings. You can switch on or off the sound also during the game.</string>
    <string name="admob_id">a15067349b414c4</string>
    <string name="help_table_header_level_name">Level</string>
    <string name="help_table_header_pairs">Pairs</string>
    <string name="help_table_header_preview_time">Prev. Time\n(sec.)</string>
    <string name="help_table_header_game_time">Game Time\n(sec.)</string>
    <string name="help_table_header_min_points">Min\npoints</string>
    <string name="help_table_header_points_for_seconds">Points for\nSeconds</string>
    <string name="lvl_0_name">Level 1 &#8211; 1</string>
    <string name="lvl_1_name">Level 2 &#8211; 1</string>
    <string name="lvl_2_name">Level 2 &#8211; 2</string>
    <string name="lvl_3_name">Level 3 &#8211; 1</string>
    <string name="lvl_4_name">Level 3 &#8211; 2</string>
    <string name="lvl_5_name">Level 3 &#8211; 3</string>
    <string name="lvl_6_name">Level 4 &#8211; 1</string>
    <string name="lvl_7_name">Level 4 &#8211; 2</string>
    <string name="lvl_8_name">Level 4 &#8211; 3</string>
    <string name="lvl_9_name">Level 4 &#8211; 4</string>

</resources>