<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textAddUserTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/enterUserTitle"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/editTextNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/fieldUserName" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonSubmitUser"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_margin="20dp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/button_text_padding"
            android:text="@string/submitUserName"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_id"
        ads:loadAdOnCreate="true" />

</RelativeLayout>