<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvGameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameOver"
            android:textColor="@color/default_dark_red"
            android:textSize="@dimen/endlevel_game_over_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/gameoverImage"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:contentDescription="@string/imgGameOver"
            android:scaleType="fitStart"
            android:src="@integer/won_all" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/endlevel_scores_margin"
            android:background="@drawable/common_bg"
            android:padding="@dimen/endlevel_scores_padding" >

            <TableRow
                android:id="@+id/tableScoreHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/headerBefore"
                    android:layout_marginRight="@dimen/endlevel_scores_titles_margins"
                    android:text="@string/tableHeaderBefore"
                    android:textSize="@dimen/endlevel_scores_title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/headerLast"
                    android:layout_marginRight="@dimen/endlevel_scores_titles_margins"
                    android:text="@string/tableHeaderLastLevel"
                    android:textSize="@dimen/endlevel_scores_title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/headerTotal"
                    android:text="@string/tableHeaderTotal"
                    android:textSize="@dimen/endlevel_scores_title_text_size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp" >

                <TextView
                    android:id="@+id/valueBefore"
                    android:text="16000"
                    android:textSize="@dimen/endlevel_scores_points_text_size" />

                <TextView
                    android:id="@+id/valueLast"
                    android:text="1600"
                    android:textSize="@dimen/endlevel_scores_points_text_size" />

                <TextView
                    android:id="@+id/valueTotal"
                    android:text="160000"
                    android:textSize="@dimen/endlevel_scores_points_text_size" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/game_over_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/restartButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_bg"
                android:padding="@dimen/button_text_padding"
                android:text="@string/buttonRestart"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/buttonMainMenu"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_bg"
                android:padding="@dimen/button_text_padding"
                android:text="@string/buttonMainMenu"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_bg"
                android:padding="@dimen/button_text_padding"
                android:text="@string/next_button"
                android:textColor="@color/default_dark_red"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/highScoresButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_bg"
                android:padding="@dimen/button_text_padding"
                android:text="@string/highScores"
                android:textColor="@color/default_dark_red"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>